--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "node-authentication",
   "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
   "dependencies": {
     "bcrypt-nodejs": "latest",
+    "body-parser": "^1.18.3",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
     "ejs": "~2.5.2",
@@ -13,15 +11,16 @@
     "express-session": "^1.17.1",
     "lodash": "^4.17.21",
     "method-override": "~2.3.6",
-    "mongodb": "^3.6.5",
-    "mongoose": "^5.12.2",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.4",
     "morgan": "^1.10.0",
     "mpath": "^0.8.3",
-    "nodemon": "^2.0.7",
+    "multer": "^1.4.2",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
-    "passport-twitter": "~1.0.4"
+    "passport-twitter": "~1.0.4",
+    "path": "^0.12.7"
   }
 }
